fixed the navbar

--- a/frontend/src/components/movie-card/movieCard.css
+++ b/frontend/src/components/movie-card/movieCard.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     cursor: pointer;
+    width: 14rem;
 }
 .moviecard-fulldiv img{
     height: 21rem;
