--- a/frontend/src/components/cast/cast.css
+++ b/frontend/src/components/cast/cast.css
@@ -1,11 +1,14 @@
 .cast-fulldiv{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    max-width: 60px;
 }
 .cast-fulldiv img{
     border-radius: 3px;
     overflow: hidden;
+    height: 44px;
+    width: 32px;
 }
 .cast-fulldiv p{
     margin: 0;
