--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -10,6 +10,7 @@
     justify-content: space-between;
     align-items: center;
     z-index: 1000;
+    gap: 5px;
 }
 .navbar-logo{
     color: #fff;
@@ -34,25 +35,43 @@
     background: transparent;
     border: none;
     color: #fff;
+    border-bottom: .5px solid #cacaca;
+}
+.navbar-searchdiv input::placeholder{
+    font-family: 'Roboto Condensed', sans-serif;
 }
 .navbar-searchdiv input:focus{
     outline: none;
 }
 .search-bar{
-    position: relative;
+    position: relative; 
 }
-.search-result-div{
-    display: flex;
-    position: absolute;
-    flex-direction: column;
-    width: 100%;
-    gap: 5px;
-    background-color: #95959598;
-    transform: translateY(10px);
+.navbar-btn{
     padding: 5px 10px;
-    box-sizing: border-box;
+    font-size: 1.2rem;
+    font-family: 'Roboto Condensed', sans-serif;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    filter: drop-shadow(2px 2px 3px #cacaca);
 }
-.search-result-button{
-    color: #fff;
-    text-decoration: none;
+.navbar-btn:focus{
+    filter: none;
+}
+@media only screen and (max-width: 800px) {
+    .navbar-fulldiv{
+        padding:0 10px;
+        justify-content: center;
+    }
+    .navbar-logo{
+        display: none;
+    }
+    .navbar-searchdiv input{
+        font-size: 1rem;
+        width: 10rem;
+    }
+    .navbar-btn{
+        padding: 5px 10px;
+        font-size: .9rem;
+    }
 }
